# voidfactory

./: Cargo.toml  README.md  flake.nix
src/: camera.rs  main.rs
