[package]
name = "voidfactory"
version = "0.1.0"
edition = "2024"

[dependencies]
kiss3d =  { git = "https://github.com/sebcrozet/kiss3d" }
num-traits = "0.2.19"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3