[package]
name = "voidfactory"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11"
pollster = "0.4"
wgpu = "25.0"
winit = "0.30"
bytemuck = "1.23"
anyhow = "1.0"
log = "0.4"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
